@@ -551,7 +551,7 @@ u_long32 show
          if (!(dominant & DOMINANT_TYPE_VALUE)) {
             printf("%s:%s=%s\n", dom, lGetString(rep, CE_name), s);
          } else {
-            printf("%s:%s=<<<has_no_value>>>\n", dom, lGetString(rep, CE_name));
+            printf("%s:%s=<<<has_no_value>>>\n", "NA", lGetString(rep, CE_name));
          }
          break;
       }
