@@ -1,3 +1,7 @@
+EB-2003-07-14-1: Enhancem.: Bugfix for Enhancem. EB-2003-07-09-0
+                            * handle suspend_thrsholds correctly
+                 Changed:   sge_schedd, qstat, qhost
+
 AA-2003-07-14-0: Enhancem.: qmon adaption for EB-2003-07-09-0
                             * dialogue changes that reference complexes
                  Changed:   qmon           
